deliverables week 5